--- a/CS250 - Building a Sensor System/Sensor Bop-It/graphing_CapstoneNotebook.ipynb
+++ b/CS250 - Building a Sensor System/Sensor Bop-It/graphing_CapstoneNotebook.ipynb
@@ -402,18 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Game now fully works. Blinks light corresponding to sensor, briefly blinks all lights when correct action is taken.\n",
-    "#All lights blink slowly on game over and score is printed instead of flashed.\n",
-    "\n",
-    "#Switched the LED_PINS back to being a dictionary. It was easier to keep track of which actions lit up each LED.\n",
-    "\n",
-    "#Changed the data arrays from being global variables to being part of the game class, I was getting weird errors when they\n",
-    "#were in global scope.\n",
-    "\n",
-    "#Added a max and min delay between actions to the game class. max/min delay can be tweaked as well as how much delay decreases\n",
-    "#after each action.\n",
-    "\n",
-    "#Moved game loop into Game.runGame()"
+    "#Thank you!"
    ]
   }
  ],
